# magician-demonstrator

./: INSTALLATION.md  README.md
demonstrator_tree/: CMakeLists.txt
demonstrator_tree/config/: bt_tree.xml  parameters.yaml
demonstrator_tree/include/demonstrator_tree/: behavior_node.hpp
demonstrator_tree/src/: main.cpp
demonstrator_tree/src/demonstrator_tree/: behavior_node.cpp  parameters_parser.cpp
